Changed package name and command line command.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glob-tester",
+  "name": "glob-test",
   "version": "1.0.0",
   "description": "Tests minimatches on your command line",
   "main": "index.js",
@@ -12,6 +12,6 @@
   },
   "preferGlobal": "true",
   "bin": {
-    "globtest": "index.js"
+    "glob-test": "index.js"
   }
 }
